# bike_svi

./: .gitignore  Makefile  README.md  bike_svi_analysis.md  environment.yml  logs.txt  pyproject.toml  requirements.txt  setup.py
bike_svi/data/: make_dataset.py  network.py
bike_svi/features/: build_features.py
bike_svi/models/: 1.causal_inference_models_initial.R  2.data_exploration_feature_engineering.R  3.model.R  utils.R
bike_svi/visualization/: download_svi.py  model_results.R  utils.R  visualize.py  work_flow 2.R
docs/: Makefile  conf.py  index.rst  make.bat
models/: ._ols.txt  ._poisson.txt  ._summary_stats.txt  ._year_fe_ols.txt  ._year_fe_poisson.txt  binary_causal_forest_var_imp.csv  binary_fe_zinb.txt  binary_overdispersion_test.txt  binary_pooled_zinb.txt  binary_simple_ols.txt  causal_forest_var_imp.csv  continuous_fe_zinb.txt  continuous_overdispersion_test.txt  continuous_pooled_zinb.txt  continuous_simple_ols.txt  fe_zinb.txt  neg_bin.txt  ols.txt  overdispersion_test.txt  poisson.txt  pooled_zinb.txt  psm_first_stage.tex  psm_second_stage.tex  simple_ols.txt  summary_stats.txt  summary_stats_latetx.tex  summary_stats_latetx.txt  year_fe_ols.txt  year_fe_poisson 2.txt
models/London/: ._autoc.tex  ._causal_forest_table.tex  ._fe_zinb.txt  ._ols.txt  ._overdispersion_test.txt  ._poisson.txt  ._pooled_zinb.txt  autoc.tex  (+32 more)
notebooks/: bike_svi_analysis.Rmd  bike_svi_analysis.ipynb  data_cleaning.ipynb  delete_file.py  download.ipynb  download_svi.ipynb  sidewalk_check.ipynb
ohsome_log/: ohsome_2022-09-28T173430.json
reports/: postprint.tex
(+3063 files in other folders)
